# Course_work_django

./: pyproject.toml
