[tool.poetry]
name = "course-work-django"
version = "0.1.0"
description = ""
authors = ["Vadim <vadim.marakushin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
